# chatting1

./: Cargo.toml  README.md
docs/: 00-overview.md  01-architecture.md  02-networking.md  03-rooms.md  04-identity.md  05-encryption.md  06-cli-ux.md  07-persistence.md  08-crate-manifest.md  TODO.md
src/: app.rs  cli.rs  config.rs  crypto.rs  identity.rs  logger.rs  main.rs  network.rs  room.rs  types.rs
